@@ -4,6 +4,14 @@
 # ^^^^^ REAL SHEBANG ^^^^^ (real test with real reqman sources)
 #    (works in vs code, press F5)
 #--------------------------------------------------------------
+
+# SELFCONF test (currently, it's only a weird proc (uncallable ;-))
+# SELFCONF test (currently, it's only a weird proc (uncallable ;-))
+# SELFCONF test (currently, it's only a weird proc (uncallable ;-))
+# SELFCONF test (currently, it's only a weird proc (uncallable ;-))
+# SELFCONF test (currently, it's only a weird proc (uncallable ;-))
+# SELFCONF test (currently, it's only a weird proc (uncallable ;-))
+
 - conf:
     root: http://localhost:11111
     rsc: bigtxt
